# forgiven

./: .gitignore  CLAUDE.md  CONFIG.md  Cargo.toml  LICENSE  Makefile  PHASE3_PLAN.md  PHASE3_TESTING.md  Plan.md  README.md  SECURITY.md  audit.toml  deny.toml  rustfmt.toml  test.py  test.rs
.cargo/: audit.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
companion/: .gitignore  diagnosis.md  package-lock.json  package.json  test.md
companion/scripts/: vendor.mjs
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/src/: lib.rs  main.rs  nexus.rs
companion/ui/: index.html  main.js  style.css
docs/: agent-panel-redesign.md  ai-ide-specs-index.md  artifact-layer.md  as-a-seasoned-software-temporal-blanket.md  codified-context.md  context-efficiency.md  context-management-research.md  context-optimization-plan.md  context-optimization-roadmap.md  context-optimization-speckit.md  editor-agent-refactor.md  forgiven-panel-checklist.md  hybrid-reliability-plan.md  intent-translator.md  large-file-refactor-plan.md  lsp-csharp.md  mcp-servers.md  module-analysis.md  performance-improvements.md  reference.md  roadmap-analysis.md  subagent-decomposition.md
docs/adr/: 0001-terminal-ui-framework.md  0003-lsp-integration-architecture.md  0004-copilot-authentication.md  0005-copilot-inline-completions-ghost-text.md  0006-agent-chat-panel.md  0008-normal-mode-editing-operations.md  0009-syntax-highlighting-syntect.md  0010-file-explorer-tree-sidebar.md  0011-agentic-tool-calling-loop.md  0013-project-folder-argument.md  0018-horizontal-scroll-viewport-fix.md  0021-render-loop-performance.md  0022-markdown-rendering.md  0023-which-key-render-timer.md  0027-agent-round-limits-and-continuation-prompts.md  0028-model-selection-persistence.md  0029-task-panel-for-work-tracking.md  0031-agent-task-creation.md  0032-recent-files-in-file-picker.md  0033-mermaid-and-markdown-browser-export.md  0034-explorer-file-deletion.md  0035-agent-apply-diff.md  0036-multi-line-agent-input.md  0037-think-block-rendering.md  0038-unified-model-selection.md  0039-agent-status-indicator.md  0040-context-gauge.md  0041-agent-panel-copy-code-block.md  0042-agent-paste-summary.md  0043-vertical-split-screen.md  0044-explorer-new-folder.md  0045-mcp-client.md  0046-agent-retry-visibility.md  0047-git-commit-message-generation.md  0048-mcp-status-visualisation.md  0049-diagnostics-overlay.md  0050-mcp-env-var-secrets.md  0051-startup-loading-indicator-and-parallelisation.md  0052-dotnet-lsp-csharp-ls.md  0053-mcp-container-isolation.md  (+98 more)
docs/spec/: CONSTITUTION.md  context-management.md
forgiven/: .gitignore  Cargo.toml  PHASE2_TESTING.md  README.md  test.cs
forgiven/docs/: MODEL_CONFIG.md
forgiven/docs/adr/: 0002-async-runtime-and-event-loop.md  0007-vim-modal-keybindings.md  0012-agent-ux-context-and-file-refresh.md  0014-agent-model-selection.md  0015-file-creation-and-explorer-enhancements.md  0016-vim-yank-paste-register.md  0017-multi-line-yank-delete-visual-line.md  0019-snapshot-undo-redo.md  0020-lazygit-integration.md  0022-markdown-rendering.md  0024-project-wide-text-search.md  0025-explorer-hidden-files-toggle.md  0026-copilot-stream-resilience.md  0026-enhancing-copilot-resilience.md  0029-task-panel-for-work-tracking.md  0030-in-file-search-and-replace.md  README.md
forgiven/src/: main.rs
forgiven/src/agent/: mod.rs  tools.rs
forgiven/src/buffer/: buffer.rs  cursor.rs  history.rs
forgiven/src/config/: mod.rs
forgiven/src/editor/: mod.rs
forgiven/src/explorer/: mod.rs
forgiven/src/highlight/: mod.rs
forgiven/src/keymap/: mod.rs
forgiven/src/lsp/: config.rs  mod.rs
forgiven/src/markdown/: mod.rs
forgiven/src/search/: mod.rs
forgiven/src/tasks/: mod.rs
forgiven/src/ui/: mod.rs
mcp_servers/: Dockerfile.llmlingua  llmlingua_server.py
scripts/: check-token-usage.py  probe_copilot_models.py
src/: csv_preview.rs  json_preview.rs  main.rs
src/agent/: agentic_loop.rs  auth.rs  codified_context.rs  context.rs  conversation.rs  intent.rs  mod.rs  models.rs  panel.rs  project_tree.rs  provider.rs  session.rs  session_log.rs  stream_poll.rs  streaming.rs  submit.rs  token_count.rs  tool_dispatch.rs  tools.rs
src/buffer/: buffer.rs  cursor.rs  history.rs  mod.rs
src/config/: mod.rs
src/debt/: cache.rs  cognitive.rs  intent.rs  mod.rs  narrative.rs  technical.rs
src/editor/: actions.rs  ai.rs  (+16 more)
(+51 files in other folders)
