[package]
name = "forgiven"
version = "0.8.9-alpha.20"
edition = "2021"
authors = ["Dane Balia"]
description = "An AI-first, terminal-based code editor with GitHub Copilot agent integration"
license = "MIT"

[[bin]]
name = "forgiven"
path = "src/main.rs"

[dependencies]
# TUI rendering
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "7"

# String utilities
unicode-width = "0.2"
unicode-segmentation = "1"

# LSP support
lsp-types = "0.97"
lsp-server = "0.7"
url = "2"

# Copilot Chat / agent HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-themes", "default-syntaxes", "regex-fancy", "yaml-load"] }

# Tree-sitter (AST parsing — text objects, folding, sticky scroll)
tree-sitter            = "0.22"
tree-sitter-rust       = "0.21"
tree-sitter-python     = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go         = "0.21"
tree-sitter-json       = "0.21"
tree-sitter-bash       = "0.21"

# System clipboard
arboard = "3"

# Image encoding (clipboard → PNG → base64 for agent vision)
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

# Markdown rendering (agent panel + editor preview)
pulldown-cmark = "0.12"

# Token counting for context breakdown (Phase 1 — context optimisation)
tiktoken-rs = "0.5"

[dev-dependencies]
pretty_assertions = "1"

# ── Lint configuration ─────────────────────────────────────────────────────────
# These are enforced by `cargo clippy` and `cargo build`.
# In CI (Makefile / GitHub Actions) we pass `-D warnings` to promote all
# warnings to errors so the build fails on any regression.
[lints.rust]
# Forbid unsafe code project-wide.  Any future unsafe block must be explicitly
# justified and reviewed.
unsafe_code     = "forbid"
# Surface dead code and unused imports as warnings locally.
dead_code       = "warn"
unused_imports  = "warn"

[lints.clippy]
# Enable the full default clippy lint set as warnings.
all      = "warn"
# Promote the correctness-focused lints to errors — these indicate real bugs.
correctness = "deny"
