[package]
name = "forgiven"
version = "0.1.0"
edition = "2021"
authors = ["Dane Balia"]
description = "An AI-first, terminal-based code editor with GitHub Copilot agent integration"

[[bin]]
name = "forgiven"
path = "src/main.rs"

[dependencies]
# TUI rendering
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "7"

# String utilities
unicode-width = "0.2"
unicode-segmentation = "1"

# LSP support
lsp-types = "0.97"
lsp-server = "0.7"
url = "2"

[dev-dependencies]
pretty_assertions = "1"
